fixes header bg on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -3,12 +3,16 @@
 header {
 	background: linear-gradient($ltblack, $ltblack), url("images/shoesite-bg.jpg") no-repeat;
 	background-size: cover;
-	background-position: center;
+	background-position: 50%;
+	background-attachment: fixed;
 	width: 100%;
 	height: 500px;
 	@include phone-res {
-		background-position: 65%;
-		height: 300px;		
+		background-position: 65% -125px;
+		height: 40vh;		
+	}
+	@include header-text {
+		background-position: 75%
 	}
 	h1 {
 		color: #fff;
@@ -42,7 +46,6 @@ header {
 	}
 	nav {
 		width: 100%;
-		position: fixed;
 		top: 0;
 		left: 0;
 		z-index: 9999;
@@ -83,6 +86,7 @@ header {
 		}
 		ul.social-icons li {
 			list-style: none;
+
 			a {
 				float:right;
 				width: 30px;
